--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,10 @@
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": true,
+            "args": ["--checkpoint-file", "/home/roni/Projects/runs/pytorch-ex2/exp3/best_model.pt", 
+                     "--learning-rate", "0.001",
+                    "--test"]
         }
     ]
 }
